# fixing the IE7 registration/password reset problem in mialogin.js , and registration form fields' overlapping in mia.css/index.php

--- a/branches/mia_0_8_2/css/mia.css
+++ b/branches/mia_0_8_2/css/mia.css
@@ -34,7 +34,7 @@ h1 {
 
 .login {
 	margin: 5% 25% 0 35%;
-	width: 350px;
+	width: 380px;
 }
 
 .login label {
